# dCAI_harness

./: Cargo.toml  Data_ownership_binding_policies.md  README.md
examples/: concurrent_agent_tools.rs  sequential_agent_dev.rs  swarm_security_agent.rs
orchestrator/: README.md  orchestrate.sh
orchestrator/lib/: ci_guard.sh  detect_runner.sh  progress.sh
orchestrator/prompts/: agent_prompt.md
orchestrator/templates/: prd_schema.json  sample_prd.json
src/: lib.rs  security_tools.rs
tools/: api_client  api_client.json  archive_handler  archive_handler.json  code_linter  code_linter.json  container_scanner  container_scanner.json  cve_scanner  cve_scanner.json  dep_auditor  dep_auditor.json  diff_tool  diff_tool.json  exa_search  exa_search.json  file_integrity  file_integrity.json  file_metadata  file_metadata.json  firewall_auditor  firewall_auditor.json  git_ops  git_ops.json  log_analyzer  log_analyzer.json  memory_forensics  memory_forensics.json  pdf_extractor  pdf_extractor.json  portlist.json  rss_parser  rss_parser.json  sandbox_exec  sandbox_exec.json  screenshot_ocr  screenshot_ocr.json  semantic_search  semantic_search.json  ssh_auditor  (+6 more)
tools/chkrootkit-mcp/: tool.json
