[package]
name = "spai"
version = "0.1.0"
edition = "2021"
authors = ["ATHPTTGH Contributors"]
license = "MIT OR Apache-2.0"
description = "ATHPTTGH Agent Harness - Production-grade multi-agent orchestration framework with OpenRouter integration"
keywords = ["ai", "agents", "llm", "multi-agent", "openrouter", "react", "swarms"]
categories = ["asynchronous", "web-programming"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Swarms framework
swarms-rs = "0.1.7"

# HTTP client for OpenRouter
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment loading
dotenvy = "0.15"

# MCP support (rmcp)
rmcp = { version = "0.11.0", features = ["client", "server", "macros", "transport-child-process"], optional = true }

# Tracing and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Security
secrecy = "0.10"

# JSON Schema
jsonschema = "0.25"
schemars = "0.8"

# Futures and streams
futures = "0.3"
async-stream = "0.3"

# Configuration
config = "0.14"

# Storage
sled = "0.34"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"], optional = true }

# Rate limiting
governor = "0.8"

# Concurrency utilities
parking_lot = "0.12"
dashmap = "6.1"

# URL handling
url = "2.5"

# Bytes utilities
bytes = "1.9"

# Solid Pod integration (optional feature)
sophia_api = { version = "0.8", optional = true }
oxigraph = { version = "0.4", optional = true }
jsonwebtoken = { version = "9.2", optional = true }
p256 = { version = "0.13", features = ["ecdsa"], optional = true }
keyring = { version = "3.2", optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.10", optional = true }
regex = "1.10"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
tempfile = "3.14"

[features]
default = ["full"]
full = ["mcp-tools", "telemetry", "storage"]
mcp-tools = ["rmcp"]
telemetry = []
storage = ["sqlx"]
solid-integration = ["sophia_api", "oxigraph", "jsonwebtoken", "p256", "keyring", "base64", "sha2"]

[[example]]
name = "basic_agent"
path = "examples/basic_agent.rs"

[[example]]
name = "multi_agent_handoff"
path = "examples/multi_agent_handoff.rs"

[[example]]
name = "guardrails_demo"
path = "examples/guardrails_demo.rs"

[[example]]
name = "basic_agent_chkrootkit"
path = "examples/basic_agent_chkrootkit.rs"
required-features = ["mcp-tools"]

[[example]]
name = "solid_agent"
path = "examples/solid_agent.rs"
required-features = ["solid-integration"]

[[example]]
name = "basic_agent_local"
path = "examples/basic_agent_local.rs"

[[example]]
name = "local_agent_chkrootkit"
path = "examples/local_agent_chkrootkit.rs"
required-features = ["mcp-tools"]

[[example]]
name = "leo_cooperation_theory"
path = "examples/leo_cooperation_theory.rs"

[[example]]
name = "swarm_security_agent"
path = "examples/swarm_security_agent.rs"
required-features = ["mcp-tools"]

[[example]]
name = "stateful_agent"
path = "examples/stateful_agent.rs"

[[example]]
name = "concurrent_agent_tools"
path = "examples/concurrent_agent_tools.rs"

[[example]]
name = "sequential_agent_dev"
path = "examples/sequential_agent_dev.rs"
